import java.util.ArrayList;
import java.util.Collection;

public abstract class SimpleList {

	protected String output;
	
	public abstract void sum();
	
	public abstract void average();
	
	public abstract void max();
	
	public abstract void min();
	
	public String getOutput() {
		return output;
	}
	
}
